src/clasp.parser.js
_clasp_parser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "stylesheet": parse_stylesheet,
        "charset": parse_charset,
        "import": parse_import,
        "namespace": parse_namespace,
        "media": parse_media,
        "media_list": parse_media_list,
        "medium": parse_medium,
        "page": parse_page,
        "psuedo_page": parse_psuedo_page,
        "font_face": parse_font_face,
        "at_rule": parse_at_rule,
        "at_keyword": parse_at_keyword,
        "block": parse_block,
        "operator": parse_operator,
        "combinator": parse_combinator,
        "unary_operator": parse_unary_operator,
        "property": parse_property,
        "ruleset": parse_ruleset,
        "declaration": parse_declaration,
        "declaration_list": parse_declaration_list,
        "selector_list": parse_selector_list,
        "selector": parse_selector,
        "simple_selector": parse_simple_selector,
        "hash": parse_hash,
        "class": parse_class,
        "element_name": parse_element_name,
        "namespace_prefix": parse_namespace_prefix,
        "element_identifier": parse_element_identifier,
        "attrib": parse_attrib,
        "attrib_operator": parse_attrib_operator,
        "attrib_value": parse_attrib_value,
        "psuedo": parse_psuedo,
        "psuedo_function": parse_psuedo_function,
        "psuedo_parameter": parse_psuedo_parameter,
        "prio": parse_prio,
        "expr": parse_expr,
        "term": parse_term,
        "percentage": parse_percentage,
        "length": parse_length,
        "ems": parse_ems,
        "exs": parse_exs,
        "angle": parse_angle,
        "time": parse_time,
        "freq": parse_freq,
        "number": parse_number,
        "function": parse_function,
        "string": parse_string,
        "string_1": parse_string_1,
        "string_2": parse_string_2,
        "identifier": parse_identifier,
        "uri": parse_uri,
        "url": parse_url,
        "unicoderange": parse_unicoderange,
        "hexcolor": parse_hexcolor,
        "brace_open": parse_brace_open,
        "brace_close": parse_brace_close,
        "bracket_open": parse_bracket_open,
        "bracket_close": parse_bracket_close,
        "paren_open": parse_paren_open,
        "paren_close": parse_paren_close,
        "terminator": parse_terminator,
        "separator": parse_separator,
        "property_separator": parse_property_separator,
        "ignore": parse_ignore,
        "comment": parse_comment,
        "required_space": parse_required_space,
        "name": parse_name,
        "nl": parse_nl,
        "nonascii": parse_nonascii,
        "escape": parse_escape,
        "w": parse_w,
        "h": parse_h,
        "nmchar": parse_nmchar,
        "nmstart": parse_nmstart,
        "unicode": parse_unicode,
        "CHARSET_SYM": parse_CHARSET_SYM,
        "IMPORT_SYM": parse_IMPORT_SYM,
        "NAMESPACE_SYM": parse_NAMESPACE_SYM,
        "MEDIA_SYM": parse_MEDIA_SYM,
        "PAGE_SYM": parse_PAGE_SYM,
        "FONT_FACE_SYM": parse_FONT_FACE_SYM,
        "IMPORTANT_SYM": parse_IMPORTANT_SYM,
        "NUMBER": parse_NUMBER,
        "IDENT": parse_IDENT,
        "S": parse_S,
        "CDO": parse_CDO,
        "CDC": parse_CDC
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "stylesheet";
      }
      
      var pos = { offset: 0, line: 1, column: 1, seenCR: false };
      var reportFailures = 0;
      var rightmostFailuresPos = { offset: 0, line: 1, column: 1, seenCR: false };
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function clone(object) {
        var result = {};
        for (var key in object) {
          result[key] = object[key];
        }
        return result;
      }
      
      function advance(pos, n) {
        var endOffset = pos.offset + n;
        
        for (var offset = pos.offset; offset < endOffset; offset++) {
          var ch = input.charAt(offset);
          if (ch === "\n") {
            if (!pos.seenCR) { pos.line++; }
            pos.column = 1;
            pos.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            pos.line++;
            pos.column = 1;
            pos.seenCR = true;
          } else {
            pos.column++;
            pos.seenCR = false;
          }
        }
        
        pos.offset += n;
      }
      
      function matchFailed(failure) {
        if (pos.offset < rightmostFailuresPos.offset) {
          return;
        }
        
        if (pos.offset > rightmostFailuresPos.offset) {
          rightmostFailuresPos = clone(pos);
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_stylesheet() {
        var result0, result1, result2, result3, result4, result5;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_charset();
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result1 = [];
          result2 = parse_import();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_import();
          }
          if (result1 !== null) {
            result2 = [];
            result3 = parse_namespace();
            while (result3 !== null) {
              result2.push(result3);
              result3 = parse_namespace();
            }
            if (result2 !== null) {
              result3 = [];
              result4 = parse_ruleset();
              if (result4 === null) {
                result4 = parse_media();
                if (result4 === null) {
                  result4 = parse_page();
                  if (result4 === null) {
                    result4 = parse_font_face();
                    if (result4 === null) {
                      result4 = parse_at_rule();
                    }
                  }
                }
              }
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_ruleset();
                if (result4 === null) {
                  result4 = parse_media();
                  if (result4 === null) {
                    result4 = parse_page();
                    if (result4 === null) {
                      result4 = parse_font_face();
                      if (result4 === null) {
                        result4 = parse_at_rule();
                      }
                    }
                  }
                }
              }
              if (result3 !== null) {
                result4 = [];
                result5 = parse_ignore();
                while (result5 !== null) {
                  result4.push(result5);
                  result5 = parse_ignore();
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, charset, imports, namespaces, contents, post) {
        		return new clasp.model.Stylesheet(charset, imports, namespaces, contents, post)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_charset() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          result1 = parse_CHARSET_SYM();
          if (result1 !== null) {
            result2 = parse_string();
            if (result2 !== null) {
              result3 = [];
              result4 = parse_ignore();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_ignore();
              }
              if (result3 !== null) {
                result4 = parse_terminator();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, sym, charset, post, terminator) {
        		return new clasp.model.Charset(pre, sym, charset, post, terminator)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_import() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          result1 = parse_IMPORT_SYM();
          if (result1 !== null) {
            result2 = parse_string();
            if (result2 === null) {
              result2 = parse_uri();
            }
            if (result2 !== null) {
              result3 = parse_media_list();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_terminator();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, sym, uri, media, terminator) {
        		return new clasp.model.Import(pre, sym, uri, media, terminator)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_namespace() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          result1 = parse_NAMESPACE_SYM();
          if (result1 !== null) {
            result2 = parse_identifier();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_string();
              if (result3 === null) {
                result3 = parse_uri();
              }
              if (result3 !== null) {
                result4 = parse_terminator();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, sym, prefix, uri, terminator) {
        		return new clasp.model.Namespace(pre, sym, prefix, uri, terminator)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_media() {
        var result0, result1, result2, result3, result4, result5;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          result1 = parse_MEDIA_SYM();
          if (result1 !== null) {
            result2 = parse_media_list();
            if (result2 !== null) {
              result3 = parse_brace_open();
              if (result3 !== null) {
                result4 = [];
                result5 = parse_ruleset();
                while (result5 !== null) {
                  result4.push(result5);
                  result5 = parse_ruleset();
                }
                if (result4 !== null) {
                  result5 = parse_brace_close();
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, sym, media, brace_open, rulesets, brace_close) {
        		return new clasp.model.Media(pre, sym, media, brace_open, rulesets, brace_close)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3], result0[4], result0[5]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_media_list() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_medium();
        if (result0 !== null) {
          result1 = [];
          pos2 = clone(pos);
          result2 = parse_separator();
          if (result2 !== null) {
            result3 = parse_medium();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = clone(pos2);
            }
          } else {
            result2 = null;
            pos = clone(pos2);
          }
          while (result2 !== null) {
            result1.push(result2);
            pos2 = clone(pos);
            result2 = parse_separator();
            if (result2 !== null) {
              result3 = parse_medium();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = clone(pos2);
              }
            } else {
              result2 = null;
              pos = clone(pos2);
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, head, tail) {
        		var list = [head]
        		
        		for (var i=0; i<tail.length; i++)
        		{
        			list = list.concat(tail[i])
        		}
        		
        		return list
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_medium() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          result1 = parse_IDENT();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, medium) {
        		return new clasp.model.Medium(pre, medium)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_page() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          result1 = parse_PAGE_SYM();
          if (result1 !== null) {
            result2 = parse_identifier();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_psuedo_page();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_brace_open();
                if (result4 !== null) {
                  result5 = parse_declaration_list();
                  if (result5 !== null) {
                    result6 = parse_brace_close();
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, sym, identifier, psuedo_page, brace_open, declarations, brace_close) {
        		return new clasp.model.Page(pre, sym, identifier, psuedo_page, brace_open, declarations, brace_close)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3], result0[4], result0[5], result0[6]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_psuedo_page() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          if (input.charCodeAt(pos.offset) === 58) {
            result1 = ":";
            advance(pos, 1);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\":\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_IDENT();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, prefix, value) {
        		return new clasp.model.PsuedoPage(pre, prefix, value)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_font_face() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_ignore();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_ignore();
        }
        if (result0 !== null) {
          result1 = parse_FONT_FACE_SYM();
          if (result1 !== null) {
            result2 = parse_brace_open();
            if (result2 !== null) {
              result3 = parse_declaration_list();
              if (result3 !== null) {
                result4 = parse_brace_close();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, pre, sym, brace_open, declarations, brace_close) {
        		return new clasp.model.FontFace(pre, sym, brace_open, declarations, brace_close)
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_at_rule() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = clone(pos);
